--- a/.gitignore
+++ b/.gitignore
@@ -4792,3 +4792,7 @@ TestSteamVR/Assets/Model/Doctor.meta
 TestSteamVR/Assets/Model/desert/Texture.meta
 TestSteamVR/Assets/Model/desert/Material.meta
 TestSteamVR/Assets/Model/desert/Asset.meta
+TestSteamVR/.vs/TestSteamVR/v16/.suo
+TestSteamVR/Library/ArtifactDB
+TestSteamVR/Library/Search/transactions.db
+TestSteamVR/Library/SourceAssetDB
