Change head collider to trigger

--- a/.gitignore
+++ b/.gitignore
@@ -9398,3 +9398,4 @@ TestSteamVR/Temp/FSTimeGet-6309a1284eee06a46bc642f5aeb6f1eb
 TestSteamVR/Temp/FSTimeGet-687bf56c2cb8a514ba56ef1a36a3afd4
 TestSteamVR/Temp/FSTimeGet-c90d5b7c2ba00d74fbd2d644bfc08737
 TestSteamVR/Temp/FSTimeGet-def8bec6aa3a53643992ad2e80c04f25
+TestSteamVR/Temp/FSTimeGet-26fa065efee57ad4bb3a90012337ebda
