--- a/.gitignore
+++ b/.gitignore
@@ -9403,3 +9403,6 @@ TestSteamVR/Temp/FSTimeGet-6bf0ba8483a70b743b88e09f585ac5ab
 TestSteamVR/Temp/FSTimeGet-a94beb0039cb74f47ab07d5f1ea14548
 TestSteamVR/Temp/FSTimeGet-c818f915b3753ac47896fc3951b4b616
 TestSteamVR/Temp/FSTimeGet-c86696bcea3b1884d854594892b84e02
+TestSteamVR/Temp/FSTimeGet-6449d4ef02641114ea7da9fcf15846fd
+TestSteamVR/Temp/FSTimeGet-4e75ac412538b234a9e6d2fd0755bc96
+TestSteamVR/Temp/FSTimeGet-1bfc3fdc2ac056f4ca7b276b6c32a05e
