--- a/.gitignore
+++ b/.gitignore
@@ -10962,3 +10962,11 @@ TestSteamVR/QFSW.QC.Serializers.csproj
 TestSteamVR/QFSW.QC.Suggestors.csproj
 TestSteamVR/QFSW.QC.UI.csproj
 TestSteamVR/Temp/FSTimeGet-532d2d1d5faa7284288c67b0d736c86e
+TestSteamVR/Temp/FSTimeGet-6411705628b1c2f4ba08e979745e4f93
+TestSteamVR/ProjectSettings/TagManager.asset
+TestSteamVR/ProjectSettings/ProjectSettings.asset
+TestSteamVR/obj/Debug/SteamVR_Windows_EditorHelper.csprojAssemblyReference.cache
+TestSteamVR/obj/Debug/SteamVR_Input_Editor.csprojAssemblyReference.cache
+TestSteamVR/obj/Debug/QFSW.QC.Editor.Tools.csprojAssemblyReference.cache
+TestSteamVR/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+TestSteamVR/UserSettings/Layouts/default-2021.dwlt
